Whomp Whomp WIP Fix footer to always display including scrollbar

--- a/ui/src/App.scss
+++ b/ui/src/App.scss
@@ -1,16 +1,17 @@
 .app {
-  width: 100%;
-  height: 100%;
-  background-color: #eecbcb;
-  overflow-y: auto;
-  overflow-x: hidden;
-  position: fixed;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  &__content {
-    flex: 1;
-  }
+  background-color: #eecbcb;
+}
+
+body, #root {
+  height: 100%;
+  margin: 0;
+}
+
+html {
+  overflow-y: scroll;
 }
 
 /* width */
@@ -28,7 +29,7 @@
 ::-webkit-scrollbar-thumb {
   background: linear-gradient(180deg, pink, hotpink);;
   border-radius: 5px;
-  border: 3px solid black;
+  border: 2px solid black;
 }
 
 /* Handle on hover */
